--- a/index.css
+++ b/index.css
@@ -1,4 +1,124 @@
-#heading {
-  color: red;
-  font-size: 50px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 6px;
+  margin-bottom: 25px;
+}
+
+.svglogo {
+  color: #fff;
+  animation: rotate 7s linear infinite;
+  background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  border-radius: 50%;
+  padding: 0.8em;
+  width: 30px;
+  margin: 0 auto;
+  display: block;
+}
+
+.text {
+  font-size: 1.4em;
+  color: rgb(129, 120, 120);
+  text-align: center;
+  margin-top: 1em;
+  font-weight: 500;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.button-container {
+  display: flex;
+  background-color: #fff7f1;
+  width: 250px;
+  height: 40px;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px, #fff7f1 5px 10px 15px;
+  margin-top: 8px;
+}
+
+.button {
+  outline: 0 !important;
+  border: 0 !important;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  transition: all ease-in-out 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  transform: translateY(-3px);
+}
+
+.icon {
+  font-size: 20px;
+}
+
+.filter-btn {
+  margin: 10px;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.res-card {
+  background-color: #fff7f1;
+  width: 200px;
+  height: 320px;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  margin: 20px;
+  padding: 5px;
+  transition: transform 0.5s;
+}
+
+.res-card:hover {
+  border: 1px solid slategray;
+  cursor: pointer;
+  transform: scale(0.95);
+  rotate: 8deg;
+}
+
+.res-card > img {
+  width: 100%;
+  height: 150px;
+}
+
+.res-card > h3 {
+  margin: 8px 0 0 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-style: italic;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.res-card > h4 {
+  margin: 5px 0 0 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  font-weight: 200;
+  line-height: 19px;
+  letter-spacing: -0.3px;
+  color: rgba(2, 6, 12, 0.6);
 }
